# semantic-code-agx

./: .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE.md  README.md  SECURITY.md  TOOL.agents.md  TOOL.md  clippy.toml  config.toml  deny.toml  docker-compose.yml  justfile  mise.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  dependabot.yml  docker-compose.ci.yml
bins/cli/: Cargo.toml
bins/cli/src/: agent_doc.rs  args.rs  config_cmd.rs  dev.rs  error.rs  format.rs  lib.rs  main.rs  output.rs  redact_layer.rs  resolve.rs  tracing_init.rs  vector_kernel.rs
bins/cli/src/commands/: calibrate.rs  clear.rs  estimate_storage.rs  index.rs  info.rs  init.rs  jobs.rs  mod.rs  reindex.rs  search.rs  snapshot_subset.rs  status.rs
bins/cli/tests/: cli_external_integration.rs  cli_integration.rs  cli_local_integration.rs
bucket/: semantic-code.json
crates/adapters/: Cargo.toml
crates/adapters/benches/: embedding.rs  splitter.rs
crates/adapters/src/: calibration.rs  embedding_test.rs  file_sync.rs  fs.rs  ignore.rs  lib.rs  log_sink.rs  logger.rs  self_check.rs  splitter.rs  telemetry.rs  vectordb_local.rs
crates/adapters/src/cache/: config.rs  embedding.rs  memory.rs  mod.rs
crates/adapters/src/cache/disk/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
crates/adapters/src/embedding/: ane.rs  fixed.rs  gemini.rs  mod.rs  ollama.rs  onnx.rs  openai.rs  voyage.rs
crates/adapters/src/vectordb/: fixed.rs  mod.rs
crates/adapters/src/vectordb/milvus/: error.rs  grpc.rs  index.rs  metadata.rs  mod.rs  rest.rs  rest_auth.rs  rest_base_url.rs  schema.rs  shared.rs
crates/adapters/src/vectordb/milvus/proto/: milvus.proto.common.rs  milvus.proto.milvus.rs  milvus.proto.schema.rs  mod.rs
crates/adapters/src/vectordb_local/: generation_control.rs
crates/adapters/tests/: embedding_http.rs  embedding_onnx.rs  file_sync_integration.rs  fs_ignore_integration.rs  phase03_bridge_from_phase02.rs  resilience_stack.rs  splitter_integration.rs  vectordb_local_v2_integration.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/v1/: mappers.rs  mod.rs  schema.rs  types.rs  validation.rs
crates/api/tests/: api_v1_json.rs
crates/app/: Cargo.toml  build.rs
crates/app/specs/: index_pipeline.fsm
crates/app/src/: calibrate_bq1.rs  clear_index.rs  lib.rs  reindex_by_change.rs  semantic_search.rs
crates/app/src/index_codebase/: change_detector.rs  embedder.rs  inserter.rs  mod.rs  scanner.rs  splitter.rs  types.rs
crates/app/tests/: clear_index_integration.rs  index_codebase_integration.rs  local_vectordb_integration.rs  reindex_by_change_integration.rs  semantic_search_integration.rs
crates/config/: Cargo.toml
crates/config/src/: env.rs  lib.rs  load.rs  requests.rs  requests_schema.rs  runtime.rs  schema.rs  storage.rs
crates/config/tests/: config_fixtures.rs  env_fixtures.rs  request_fixtures.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: calibration.rs  chunk.rs  lib.rs  metadata.rs  primitives.rs  search.rs  search_stats.rs  spans.rs  states.rs
crates/domain/tests/: metadata_search_states.rs  primitives_spans.rs
crates/facade/: Cargo.toml
crates/facade/src/: lib.rs  types.rs
crates/infra/: Cargo.toml
crates/infra/src/: calibration_persist.rs  cli_calibration.rs  cli_local.rs  cli_manifest.rs  config_check.rs  embedding_factory.rs  embedding_router.rs  env_check.rs  factory_selection_tests.rs  index_smoke.rs  infra_api.rs  jobs.rs  lib.rs  request_check.rs  storage_estimate.rs  vectordb_factory.rs
crates/infra/tests/: adapter_selection.rs
crates/shared/: Cargo.toml
crates/shared/src/: concurrency.rs  errors.rs  invariants.rs  lib.rs  merkle.rs  redaction.rs  result.rs  retry.rs  timeout.rs  validation.rs
crates/shared/tests/: loom_once_init.rs
crates/testkit/: Cargo.toml
crates/testkit/fixtures/api-v1/: id-parity.json  json-fixtures.json
crates/testkit/fixtures/cli-output/: search.basic.json  search.basic.ndjson
crates/testkit/fixtures/config/: backend-config.default.toml  backend-config.invalid.json  backend-config.milvus-external.toml  backend-config.snapshot-v2.toml  backend-config.valid.json
crates/testkit/fixtures/env/: backend-env.invalid.json  backend-env.valid.json
crates/testkit/fixtures/fs/basic/: README.md
crates/testkit/fixtures/fs/basic/src/: main.rs
crates/testkit/fixtures/index/basic/: README.md
crates/testkit/fixtures/index/basic/src/: lib.rs  main.rs
crates/testkit/fixtures/local-index/basic/: README.md
crates/testkit/fixtures/local-index/basic/src/: lib.rs
crates/testkit/fixtures/requests/: index.valid.json  reindex.valid.json  search.invalid_codebase_root.json  search.invalid_filter_expr.json  search.invalid_topk.json  search.valid.json
crates/testkit/fixtures/search/basic/: README.md
crates/testkit/fixtures/search/basic/src/: lib.rs
crates/testkit/fixtures/splitter/basic/: README.md
crates/testkit/fixtures/splitter/basic/src/: lib.rs
crates/testkit/src/: dfrr_fixtures.rs  errors.rs  in_memory.rs  lib.rs  parity.rs
crates/testkit/tests/: error_envelope.rs  ports_contracts.rs
crates/validate-derive/: Cargo.toml
crates/validate-derive/src/: lib.rs
crates/vector/: Cargo.toml
crates/vector/benches/: u8_search.rs
crates/vector/src/: accelerate.rs  exact_rows.rs  generation.rs  lib.rs  mmap.rs  quantization.rs  snapshot.rs
crates/vector/tests/: dfrr_determinism_anchor.rs  kernel_strategy_routing.rs  mmap_integration.rs  phase02_bridge_from_phase01.rs  phase03_bridge_from_phase02.rs  quantization_integration.rs  snapshot_integration.rs  u8_search_integration.rs  vector_index_v2_integration.rs
crates/vector/tests/fixtures/: snapshot.bytes  snapshot_stats_large.expected.json
crates/vector/tests/fixtures/vector_index_v2_bundle/: ids.json
docs/: FAQ.md  GETTING_STARTED.md  README.md  TROUBLESHOOTING.md  getting-started.md  observability.md  release.md  security.md
(+93 files in other folders)
