# =============================================================================
# WORKSPACE CARGO.TOML - semantic-code-agx
# =============================================================================
# Rust modular monolith with hexagonal architecture.
# CLI-first semantic code search engine.
# =============================================================================

[workspace]
resolver = "2"

members = [
  # ─────────────────────────────────────────────────────────────────────────
  # CORE CRATES (no workspace dependencies)
  # ─────────────────────────────────────────────────────────────────────────
  "crates/core",
  "crates/shared",
  "crates/validate-derive",

  # ─────────────────────────────────────────────────────────────────────────
  # DOMAIN LAYER
  # ─────────────────────────────────────────────────────────────────────────
  "crates/domain",

  # ─────────────────────────────────────────────────────────────────────────
  # PORTS, CONFIG, AND API
  # ─────────────────────────────────────────────────────────────────────────
  "crates/ports",
  "crates/config",
  "crates/api",

  # ─────────────────────────────────────────────────────────────────────────
  # VECTOR + ADAPTERS + APP + INFRA
  # ─────────────────────────────────────────────────────────────────────────
  "crates/vector",
  "crates/adapters",
  "crates/app",
  "crates/infra",
  "crates/facade",
  #   "crates/testkit",  # internal test doubles

  # ─────────────────────────────────────────────────────────────────────────
  # CLI
  # ─────────────────────────────────────────────────────────────────────────
  "bins/cli",
]

# =============================================================================
# WORKSPACE PACKAGE METADATA
# =============================================================================
[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["Luiz Frias <luizf35@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Luiz-Frias/semantic-code-agx"
keywords = ["semantic-search", "code-search", "embeddings", "cli"]
categories = ["command-line-utilities", "development-tools"]

# =============================================================================
# WORKSPACE DEPENDENCIES
# =============================================================================
# Centralized dependency versions for consistency across crates.
# Use in crates with: dependency.workspace = true
# =============================================================================

[workspace.dependencies]
# ─────────────────────────────────────────────────────────────────────────────
# ERROR HANDLING
# ─────────────────────────────────────────────────────────────────────────────
thiserror = "2"
anyhow = "1"

# ─────────────────────────────────────────────────────────────────────────────
# SERIALIZATION
# ─────────────────────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "1"
url = "2"
schemars = "1.2"

# ─────────────────────────────────────────────────────────────────────────────
# HTTP
# ─────────────────────────────────────────────────────────────────────────────
reqwest = { version = "0.13.2", features = ["json"] }
wiremock = "0.6.5"

# ─────────────────────────────────────────────────────────────────────────────
# gRPC / Protobuf
# ─────────────────────────────────────────────────────────────────────────────
base64 = "0.22"
bytes = "1"
prost = "0.14"
tonic = { version = "0.12", features = ["transport", "tls"] }

# ─────────────────────────────────────────────────────────────────────────────
# ONNX + Tokenization
# ─────────────────────────────────────────────────────────────────────────────
ort = "2.0.0-rc.11"
tokenizers = "0.22.2"

# ─────────────────────────────────────────────────────────────────────────────
# HASHING
# ─────────────────────────────────────────────────────────────────────────────
md5 = "0.8"
sha2 = "0.11"
crc32fast = "1"
rustc-hash = "2"
uuid = { version = "1", features = ["v4"] }

# ─────────────────────────────────────────────────────────────────────────────
# CLI
# ─────────────────────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive"] }

# ─────────────────────────────────────────────────────────────────────────────
# OBSERVABILITY
# ─────────────────────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "fmt",
] }

# ─────────────────────────────────────────────────────────────────────────────
# ASYNC RUNTIME (Phase 04+)
# ─────────────────────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "rt"] }
futures-util = "0.3"
fs2 = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# ─────────────────────────────────────────────────────────────────────────────
# PARSING (Phase 05+)
# ─────────────────────────────────────────────────────────────────────────────
tree-sitter = "0.26.5"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"

# ─────────────────────────────────────────────────────────────────────────────
# VECTOR SEARCH (Phase 05+)
# ─────────────────────────────────────────────────────────────────────────────
hnsw_rs = "0.3.3"
libc = "0.2"
memmap2 = "0.9"
ordered-float = { version = "4", features = ["serde"] }
rayon = "1"

# ─────────────────────────────────────────────────────────────────────────────
# TESTING
# ─────────────────────────────────────────────────────────────────────────────
proptest = "1"
rusqlite = { version = "0.39", features = ["bundled"] }

# ─────────────────────────────────────────────────────────────────────────────
# DATABASE
# ─────────────────────────────────────────────────────────────────────────────
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
] }
tiberius = { version = "0.12", default-features = false, features = ["rustls"] }

# ─────────────────────────────────────────────────────────────────────────────
# DFRR KERNEL (private repo, BSL-1.1)
# ─────────────────────────────────────────────────────────────────────────────
# semantic-code-dfrr-hnsw = { git = "ssh://git@github.com/Luiz-Frias/dfrr-kernel-rs.git", tag = "v0.9.0" }  # private: requires SSH access

# ─────────────────────────────────────────────────────────────────────────────
# ANE INFERENCE (private repo, BSL-1.1 — Apple Neural Engine embedding inference)
# ─────────────────────────────────────────────────────────────────────────────
# ane-inference = { git = "ssh://git@github.com/Luiz-Frias/ane-inference-rs.git", branch = "main" }  # private: requires SSH access

# ─────────────────────────────────────────────────────────────────────────────
# WORKSPACE CRATES (internal dependencies)
# ─────────────────────────────────────────────────────────────────────────────
semantic-code-core = { path = "crates/core", version = "0.4.0" }
semantic-code-shared = { path = "crates/shared", version = "0.4.0" }
semantic-code-validate-derive = { path = "crates/validate-derive", version = "0.4.0" }
semantic-code-domain = { path = "crates/domain", version = "0.4.0" }
semantic-code-ports = { path = "crates/ports", version = "0.4.0" }
semantic-code-config = { path = "crates/config", version = "0.4.0" }
semantic-code-api = { path = "crates/api", version = "0.4.0" }
semantic-code-vector = { path = "crates/vector", version = "0.4.0" }
semantic-code-adapters = { path = "crates/adapters", version = "0.4.0" }
semantic-code-app = { path = "crates/app", version = "0.4.0" }
semantic-code-infra = { path = "crates/infra", version = "0.4.0" }
semantic-code-facade = { path = "crates/facade", version = "0.4.0" }
# semantic-code-testkit = { path = "crates/testkit", version = "0.4.0" }  # internal test doubles

# =============================================================================
# WORKSPACE LINTS
# =============================================================================
# Lint configuration inherited by all workspace crates.
# Individual crates can override with [lints] section.
# =============================================================================

[workspace.lints.rust]
# Warnings as errors
warnings = "deny"

# Unsafe code denied by default (allow selectively in specific modules)
unsafe_code = "deny"

# Documentation requirements
missing_docs = "warn"

# Future compatibility (lower priority so individual lints can override)
rust_2024_compatibility = { level = "warn", priority = -1 }

# Additional strictness
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# ─────────────────────────────────────────────────────────────────────────────
# DENIED: Enforce documented #[allow(...)] in tests (production uses cfg_attr)
# ─────────────────────────────────────────────────────────────────────────────
# Tests: #[allow(clippy::foo, reason = "...")] is OK
# Production: NO allows permitted (enforced via cfg_attr in lib.rs/main.rs)
allow_attributes_without_reason = "deny"

# ─────────────────────────────────────────────────────────────────────────────
# DENIED: These cause panics in production code
# ─────────────────────────────────────────────────────────────────────────────
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"

# ─────────────────────────────────────────────────────────────────────────────
# DENIED: Security and correctness
# ─────────────────────────────────────────────────────────────────────────────
unwrap_in_result = "deny"
indexing_slicing = "warn" # Prefer .get() over []

# ─────────────────────────────────────────────────────────────────────────────
# WARNINGS: Code quality
# ─────────────────────────────────────────────────────────────────────────────
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic overrides (too noisy)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# =============================================================================
# PROFILES
# =============================================================================

[profile.dev]
# sccache replaces incremental compilation (they're mutually exclusive)
# sccache: caches across branches/machines; incremental: caches within single build
incremental = false

# ─────────────────────────────────────────────────────────────────────────
# SPEED OPTIMIZATIONS FOR DEV BUILDS
# ─────────────────────────────────────────────────────────────────────────
# Skip debug info entirely (fastest compilation, use release-with-debug for debugging)
debug = 0

# More codegen units = more parallelism = faster builds (at cost of runtime perf)
codegen-units = 16

# Optimize dependencies but not our code (huge speedup for linking/runtime)
[profile.dev.package."*"]
opt-level = 2

[profile.release]
# Optimize for size and speed
lto = "thin"
codegen-units = 1
strip = true

# =============================================================================
# PATCH: Resolve private-repo transitive deps to local workspace crates.
# The dfrr-kernel-rs crate declares `semantic-code-shared = "0.2"` and
# `semantic-code-vector = "0.2"` as crates.io deps. Since these aren't
# published yet, we patch them to resolve from the workspace instead.
# =============================================================================
[patch.crates-io]
semantic-code-shared = { path = "crates/shared" }
semantic-code-vector = { path = "crates/vector" }

# Local override for the private DFRR kernel while refactors are in-flight.
# This keeps `--all-features` checks aligned with sibling workspace changes.
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.release-pgo-generate]
inherits = "release"
strip = false        # LLVM needs symbols to map .profraw → functions
lto = "thin"         # Sufficient for instrumentation phase

[profile.release-pgo-use]
inherits = "release"
lto = "fat"          # Full cross-crate inlining with profile data
strip = true
