[package]
name = "semantic-code-config"
description = "Configuration schema and validation for semantic-code-agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
semantic-code-domain.workspace = true
semantic-code-shared.workspace = true
semantic-code-validate-derive.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
