[package]
name = "semantic-code-core"
description = "Core utilities and build information for semantic-code-agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Core has no dependencies - it's the foundation layer

[dev-dependencies]
# Testing
