[package]
name = "semantic-code-infra"
description = "Infrastructure wiring and composition root for semantic-code-agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
semantic-code-app.workspace = true
semantic-code-adapters = { workspace = true, features = [
  "openai",
  "gemini",
  "ollama",
  "voyage",
  "onnx",
] }
semantic-code-config.workspace = true
semantic-code-domain.workspace = true
semantic-code-ports.workspace = true
semantic-code-shared.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
md5.workspace = true
uuid.workspace = true

[dev-dependencies]

[features]
default = []
milvus-rest = ["semantic-code-adapters/milvus-rest"]
milvus-grpc = ["semantic-code-adapters/milvus-grpc"]
